Added Design in Home Page

--- a/src/app/homeapp/homeapp.component.html
+++ b/src/app/homeapp/homeapp.component.html
@@ -1,24 +1,24 @@
 <div id="style">
-          <br><h1>Empowering You</h1>
-          <p id="s1">Freedom is about gaining knowledge to exercise the choices. At Vitartha, we believe in empowering you in making your own financial decisions. Our ecosystem of programs and tools offers you the knowhow and choices to really become financially free. </p>
+  <br><h1>Empowering You</h1>
+  <p id="s1">Freedom is about gaining knowledge to exercise the choices. At Vitartha, we believe in empowering you in making your own financial decisions. Our ecosystem of programs and tools offers you the knowhow and choices to really become financially free. </p>
 
-        </div>
+</div>
 
 <div class="container">
-    <div class="col-md-5">
-      <h1>Become your own advisor</h1>
-      <p>Our panel of consulting advisors will never sell you any financial product. Our contractual obligation will be limited to offering you the right advice to protect your interest.</p>
-    </div>
+  <div class="col-md-5">
+    <h1>Become your own advisor</h1>
+    <p>Our panel of consulting advisors will never sell you any financial product. Our contractual obligation will be limited to offering you the right advice to protect your interest.</p>
+  </div>
   <div class="col-md-2">
   </div>
   <div class="col-md-5">
     <h1>Consulting Advisory</h1>
     <p>Our Expert Services group of highly qualified and experienced professionals can help you with your specific needs. Use our consulting advisory services on:</p>
   </div>
-  </div>
+</div>
 <div class="container1">
   <div class="col-md-5">
-    </div>
+  </div>
   <div class="col-md-2">
   </div>
   <div class="left">
@@ -33,5 +33,12 @@
   <h1 class="f1">Become your own advisor</h1>
 </div>
 
-<div>
+<div class="border">
+  <form class="form">
+    <h3><u>Register for Course</u></h3>
+    <p>Name <input type="text" class="form-control" id="w1"></p>
+    <p>Mobile <input type="text" class="form-control" id="w2"></p>
+    <p>Email ID <input type="text" class="form-control" id="w3"></p>
+    <p>Query<textarea cols="23" rows="5" id="w4"></textarea></p>
+  </form>
 </div>
