--- a/src/app/homeapp/homeapp.component.css
+++ b/src/app/homeapp/homeapp.component.css
@@ -1,12 +1,12 @@
 #s1{
   text-align:center;
   font-size:20px;
-margin-top:200px;
+  margin-top:200px;
   font-family: OpenSymbol;
 }
 .s2{
   text-align:center;
-  margin-top:550px;
+  margin-top:500px;
   font-family: OpenSymbol;
   color:red;
   width:600px;
@@ -57,4 +57,39 @@ h1{
   border-right: 1px solid #141620;
   border-bottom: 1px solid #141620;
   border-width: 30px;
+}
+.form{
+  font-family: OpenSymbol;
+  font-size: 20px;
+  margin-top: 50px;
+  margin-left: 50px;
+}
+
+.border{
+  border-top: 1px solid #141620;
+  border-left: 1px solid #141620;
+  border-right: 1px solid #141620;
+  border-bottom: 1px solid #141620;
+  width: 30%;
+  margin-left: 500px;
+}
+h3{
+  text-align: center;
+  margin-top: 10px;
+  margin-left: -280px;
+}
+#w1{
+  width:200px;
+  margin-left: 30px;
+}
+#w2{
+  width:200px;
+  margin-left: 20px;
+}
+#w3{
+  width:200px;
+  margin-left: 1px;
+}
+#w4{
+  margin-left: 42px;
 }
