--- a/src/app/homeapp/homeapp.component.html
+++ b/src/app/homeapp/homeapp.component.html
@@ -1,3 +1,4 @@
+<div class="boun">
 <div id="style">
   <br><h1>Empowering You</h1>
   <p id="s1">Freedom is about gaining knowledge to exercise the choices. At Vitartha, we believe in empowering you in making your own financial decisions. Our ecosystem of programs and tools offers you the knowhow and choices to really become financially free. </p>
@@ -35,10 +36,12 @@
 
 <div class="border">
   <form class="form">
-    <h3><u>Register for Course</u></h3>
+    <h3 class="g1"><u>Register for Course</u></h3>
     <p>Name <input type="text" class="form-control" id="w1"></p>
     <p>Mobile <input type="text" class="form-control" id="w2"></p>
     <p>Email ID <input type="text" class="form-control" id="w3"></p>
     <p>Query<textarea cols="23" rows="5" id="w4"></textarea></p>
+    <input type="submit" value="SUBMIT" class="submit">
   </form>
+</div>
 </div>
