--- a/src/app/homeapp/homeapp.component.html
+++ b/src/app/homeapp/homeapp.component.html
@@ -1,47 +1,27 @@
-<div class="boun">
-<div id="style">
-  <br><h1>Empowering You</h1>
-  <p id="s1">Freedom is about gaining knowledge to exercise the choices. At Vitartha, we believe in empowering you in making your own financial decisions. Our ecosystem of programs and tools offers you the knowhow and choices to really become financially free. </p>
-
-</div>
-
-<div class="container">
-  <div class="col-md-5">
-    <h1>Become your own advisor</h1>
-    <p>Our panel of consulting advisors will never sell you any financial product. Our contractual obligation will be limited to offering you the right advice to protect your interest.</p>
-  </div>
-  <div class="col-md-2">
-  </div>
-  <div class="col-md-5">
-    <h1>Consulting Advisory</h1>
-    <p>Our Expert Services group of highly qualified and experienced professionals can help you with your specific needs. Use our consulting advisory services on:</p>
-  </div>
-</div>
-<div class="container1">
-  <div class="col-md-5">
-  </div>
-  <div class="col-md-2">
-  </div>
-  <div class="left">
-    <h1 class="a1">Education</h1>
-    <p>Our flagship education programs help you gain path-breaking insight on making financial decisions using simple but effective rules. We intend to equip you with necessary tools to control your own finance.</p>
-    <h3>OUR FLAGSHIP PROGRAMS:</h3>
-    <p>The <b>'THREE STEPS'</b> to financial freedom' program empowers you with time-tested strategies to become your own financial advisor. You will be able to make right personal financial decisions in any situation.</p>
+<div class="jumbotron">
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-md-10 pt-5 mt-3">
+        <h1 class="display-4 mb-4">Empowering You</h1>
+        <p>Freedom is about gaining knowledge to exercise the choices. At Vitartha, we believe in empowering you in making your own financial decisions. Our ecosystem of programs and tools offers you the knowhow and choices to really become financially free.</p>
+      </div>
+    </div>
   </div>
 </div>
 
-<div class="s2">
-  <h1 class="f1">Become your own advisor</h1>
-</div>
+<div class="service">
+<div class="container-fluid">
+  <div class="row">
 
-<div class="border">
-  <form class="form">
-    <h3 class="g1"><u>Register for Course</u></h3>
-    <p>Name <input type="text" class="form-control" id="w1"></p>
-    <p>Mobile <input type="text" class="form-control" id="w2"></p>
-    <p>Email ID <input type="text" class="form-control" id="w3"></p>
-    <p>Query<textarea cols="23" rows="5" id="w4"></textarea></p>
-    <input type="submit" value="SUBMIT" class="submit">
-  </form>
+    <div *ngFor="let subs of sections; even as even; odd as odd" class="col-md-6" [ngClass]="{'advisor':even, 'advisory':odd}">
+      <div class="hexagon">
+        <i class="fa " [ngClass]="{'fa-universal-access':even, 'fa fa-user-circle-o':odd}"></i>
+      </div>
+
+      <h2>{{ subs.title }}</h2>
+      <p>{{ subs.description }}</p>
+    </div>
+
+  </div>
 </div>
 </div>
