--- a/src/app/homeapp/homeapp.component.css
+++ b/src/app/homeapp/homeapp.component.css
@@ -1,114 +1,86 @@
-#s1{
-  text-align:center;
-  font-size:20px;
-  margin-top:200px;
-  font-family: OpenSymbol;
-}
-.s2{
-  text-align:center;
-  margin-top:520px;
-  font-family: OpenSymbol;
-  color:red;
-  margin-left: 0%;
-}
-h1{
-  text-align:center;
-  font-family: OpenSymbol;
-}
-#style{
+.jumbotron {
   background-color: #141620;
-  color:#ffffff;
   background-size: cover;
-  min-height: 550px;
-  background-attachment: fixed;
-  z-index: 1;
+  min-height: 500px;
 }
-
-.container{
-  width:1100px;
-  margin: 0 auto;
-  margin-top:70px;
-}
-
-.col-md-5{
-  width:50%;
-  float:left;
-}
-.col-md-2{
-  width:50%;
-  float:left;
-}
-.container1{
-  width:1100px;
-  margin: 0 auto;
-  margin-top:230px;
-}
-.left {
-  width: 50%;
-  float: right;
-}
-.a1{
-  color: red;
-}
-.f1{
-  border-top: 1px solid #141620;
-  border-left: 1px solid #141620;
-  border-right: 1px solid #141620;
-  border-bottom: 1px solid #141620;
-  border-width: 30px;
-}
-.form{
+h1, p{
+  color:#fff;
   font-family: OpenSymbol;
-  font-size: 20px;
-  margin-top: 50px;
-  margin-left: 50px;
 }
-
-.border{
-  border-top: 1px solid #141620;
-  border-left: 1px solid #141620;
-  border-right: 1px solid #141620;
-  border-bottom: 1px solid #141620;
-  width: 30%;
-  height:380px;
-  margin-left: 500px;
+p{
+  font-size: 18px;
 }
-h3{
+.service .container-fluid {
+  padding-left: 0;
+  padding-right: 0;
+}
+.service .container-fluid .row {
+  margin-left: 0;
+  margin-right: 0; }
+.service .advisor, .service .advisory {
+  padding: 7rem 4rem 5rem;
   text-align: center;
-  margin-top: 10px;
-  margin-left: -280px;
+  background: rgba(239, 239, 239, 0.84);
+  -webkit-transition: all .2s ease 0s;
+  transition: all .2s ease 0s; }
+.service .advisor:hover, .service .advisory:hover {
+  background: lightgreen;}
+.service h2 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 2rem;
+  min-height: 2.2rem;
+  font-weight: 500;
+  margin-bottom: 0.3rem;}
+.service p {
+  margin-bottom: 10px;
+  font-size: 16px;
+  color: black;
 }
-#w1{
-  width:200px;
-  margin-left: 32px;
+.service{
+  background-color: aqua;
+  background-size: cover;
+  margin-top: -32px;
 }
-#w2{
-  width:200px;
-  margin-left: 22px;
-}
-#w3{
-  width:200px;
-  margin-left: 1px;
-}
-#w4{
-  margin-left: 42px;
-}
-.g1{
-  margin-left: -50px;
-  margin-top: -20px;
-}
-.submit{
+.service .hexagon {
+  position: relative;
+  width: 110px;
+  height: 60px;
+  background-color: #fff;
+  margin: 0 auto 3rem;
   text-align: center;
-  margin-left: 23%;
-  background-color: #141620;
-  color: #ffffff;
-  width: 150px;
-  margin-top: 20px;
-}
-.boun{
-  border-top: 2px solid #141620;
-  border-left: 2px solid #141620;
-  border-right: 2px solid #141620;
-  border-bottom: 2px solid #141620;
-  height: 1600px;
-}
+  color: #f95006;
+  -webkit-transition: background .5s ease-in-out, padding .5s ease-in-out;
+  -moz-transition: background .5s ease-in-out, padding .5s ease-in-out;
+  transition: background .5s ease-in-out, padding .5s ease-in-out; }
+.service .hexagon i {
+  font-size: 58px; }
+.service .hexagon:before, .service .hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 55px solid transparent;
+  border-right: 55px solid transparent;
+  left: 0; }
+.service .hexagon:before {
+  bottom: 100%;
+  border-bottom: 33px solid #fff; }
+.service .hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 33px solid #fff; }
+.service .advisory .hexagon {
+  color: #62a904; }
+.service .advisor:hover .hexagon, .service .advisory:hover .hexagon {
+  width: 114px;
+  height: 110px;
+  border-radius: 50%;
+  padding: 27px;
+  margin-top: -25px;
+  margin-bottom: 23px;
+  background-color: #f95006; }
+.service .advisory:hover .hexagon {
+  background-color: #62a904; }
+.service .advisor:hover .hexagon:before, .service .advisory:hover .hexagon:after {
+  display: none; }
+.service .advisor:hover .hexagon:after, .service .advisory:hover .hexagon:before {
+  display: none; }
